= Release notes v.2.6


== Bugfix: Incorrect property name in the response to the AIS consent creation request

From now on,  the endpoint for consent creation (POST `/v1/consents`) returns correct response with field `psuMessage` instead of `message`.

== Update version of spring-data-jpa to 1.11.22.RELEASE

Fixed potential security vulnerability in a repository that have been granted security alert access.
https://nvd.nist.gov/vuln/detail/CVE-2019-3797[Additional information exposure with Spring Data JPA derived queries]

== Bugfix: Periodic payment: requestedExecutionTime and requestedExecutionDate properties are set to the default values by mappers

- Payment object has to set these fields to null if they are not present in the initial request
- PisExecutionRule.PRECEEDING was renamed to PisExecutionRule.PRECEDING

== Removed deprecated getters in SpiExchangeRate class

Please use `getExchangeRate` instead of `getRate`, `getQuotationDate` instead of `getRateDate` and `getContractIdentification`
instead of `getRateContract`.